# appcon

./: CMakeLists.txt  README.debian  README.md
include/: appcon.h
include/appcon/: config.h  detail.h
lib/: CMakeLists.txt  config.cpp
tests/: CMakeLists.txt  cfgmaker.cpp  cfgmaker.h  commandline.cpp  config.cpp  environ.cpp  file.cpp
